--- a/concepts/v0/index.html
+++ b/concepts/v0/index.html
@@ -9,13 +9,17 @@
 
 	<!--<link rel="stylesheet" href="https://unpkg.com/docsify-themeable/dist/css/theme-simple-dark.css">-->
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css" title="docsify-darklight-theme" type="text/css" />
-
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.css">
 </head>
 
 <body>
 	<div id="app"></div>
 
+	<script src="//cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
 	<script>
+		var num = 0;
+		mermaid.initialize({ startOnLoad: false });
+
 		window.$docsify = {
 			name       : 'Developer Guide',
 			repo       : 'https://github.com/starcard-org/pti-docs',
@@ -30,7 +34,22 @@
 			themeable : { 
 				// readyTransition : false, 
 				// responsiveTables: false 
-			}
+			},
+			plantuml: {
+				skin: 'default',
+			},
+			markdown: {
+			    renderer: {
+			      code: function(code, lang) {
+				if (lang === "mermaid") {
+				  return (
+				    '<div class="mermaid" style="background-color: white; height: 30em; padding-bottom: 1em;">' + mermaid.render('mermaid-svg-' + num++, code) + "</div>"
+				  );
+				}
+				return this.origin.code.apply(this, arguments);
+			      }
+			    }
+			  }
 	};
 	</script>
 
@@ -44,6 +63,7 @@
         <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-json.min.js"></script>
         <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-javascript.min.js"></script>
         <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js" type="text/javascript"></script>
+        <script src="//unpkg.com/docsify-plantuml/dist/docsify-plantuml.min.js"></script>
 
 	<!-- <script src="https://unpkg.com/docsify-copy-code"></script> -->
 	<!-- <script src="https://unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script> -->
