No more needs for CORS workaround, using proxy option of npm

--- a/examples/phase1-app/reactjs/public/index.html
+++ b/examples/phase1-app/reactjs/public/index.html
@@ -34,7 +34,7 @@
       window.ptiAsyncInit = function() {
         PTI.init({
           clientId: "clientId",
-          generateTokenPath: "http://localhost:9000/generateToken"
+          generateTokenPath: "/generateToken"
           //,ptiDomain: "localhost:8000"
         });
       }
