--- a/examples/ReactJsSdkApp/public/index.html
+++ b/examples/ReactJsSdkApp/public/index.html
@@ -22,18 +22,15 @@
     <title>React JS Sdk Example</title>
     <!-- Fonts to support Material Design -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <style>
-      iframe { border-width: 0; }
-    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script async defer src="https://sdk.apidev.pticlient.com/v1.0/index.js"></script>
+    <script async defer src="https://sdk.apidev.pticlient.com/0.0.4/index.js"></script>
     <script>
       window.ptiAsyncInit = function() {
         PTI.init({
-          clientId: "clientId",
+          clientId: "3450582c-1955-11eb-adc1-0242ac120002",
           generateTokenPath: "/generateToken"
           //,ptiDomain: "localhost:8000"
         });
