Refresh api spec

--- a/examples/ReactJsSdkApp/public/index.html
+++ b/examples/ReactJsSdkApp/public/index.html
@@ -26,12 +26,13 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script async defer src="https://sdk.apidev.pticlient.com/0.0.7/index.js"></script>
+    <script async defer src="https://sdk.apidev.pticlient.com/0.0.8/index.js"></script>
     <script>
       window.ptiAsyncInit = function() {
         PTI.init({
           clientId: "be623155-18f7-40fc-99ed-27660c14e513",
-          generateTokenPath: "/generateToken"
+          generateTokenPath: "/generateToken",
+          graphQlBackend: true
           //,ptiDomain: "localhost:8000"
         });
       }
