--- a/examples/admin-appsync/public/index.html
+++ b/examples/admin-appsync/public/index.html
@@ -24,9 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <title>Admin UI</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
