--- a/examples/ReactJsSdkApp/public/index.html
+++ b/examples/ReactJsSdkApp/public/index.html
@@ -26,13 +26,14 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script async defer src="https://sdk.apidev.pticlient.com/0.0.10/index.js"></script>
+    <script async defer src="https://sdk.apidev.pticlient.com/0.0.11/index.js"></script>
     <script>
+      ptiConfig = {
+        clientId: "3450582c-1955-11eb-adc1-0242ac120002", //Use the clientId provided by the PTI team
+        generateTokenPath: "/generateToken", //Path to the endpoint on your backend to generate token
+      };
       window.ptiAsyncInit = function() {
-        PTI.init({
-          clientId: "3450582c-1955-11eb-adc1-0242ac120002",
-          generateTokenPath: "/generateToken",
-        });
+        PTI.init(ptiConfig);
       }
     </script>
     <!--
