--- a/examples/ReactJsSdkApp/public/index.html
+++ b/examples/ReactJsSdkApp/public/index.html
@@ -31,6 +31,7 @@
       ptiConfig = {
         clientId: "%REACT_APP_CLIENT_ID%", //Use the clientId provided by the PTI team
         generateTokenPath: "/generateToken", //Path to the endpoint on your backend to generate token
+        //apiDomain: 'api', //uncomment for prod env
       };
       window.ptiAsyncInit = function() {
         PTI.init(ptiConfig);
