--- a/guide/v0/index.html
+++ b/guide/v0/index.html
@@ -1,73 +1,38 @@
-!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
-	<title>PTI API v0: Developer Guide</title>
+  <meta charset="UTF-8">
+  <title>Provenance Technologies Documentation</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="description" content="Description">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css"> -->
+  <!--<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css" title="docsify-darklight-theme" type="text/css" /> -->
 
-	<!--<link rel="stylesheet" href="https://unpkg.com/docsify-themeable/dist/css/theme-simple-dark.css">-->
-	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css" title="docsify-darklight-theme" type="text/css" />
-	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.css">
-</head>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@3/dist/docsify-themeable/style.min.css" type="text/css">
 
-<body>
-	<div id="app"></div>
+    <!-- docsify-themeable styles-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css" title="light">
 
-	<script src="//cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
-	<script>
-		var num = 0;
-		mermaid.initialize({ startOnLoad: false });
+  </head>
+  <body>
+    <div id="app"></div>
+    <script>
+      window.$docsify = {
+        name: 'PTI Documentation',
+        repo: 'https://github.com/provenancetech/pti-docs',
+        homepage: 'home.md',
+        loadSidebar: true,
+        maxLevel: 4,
+        subMaxLevel: 2,
 
-		window.$docsify = {
-			name       : 'Developer Guide',
-			repo       : 'https://github.com/provenancetech/pti-docs',
-			//coverpage  : 'coverpage.md',
-			homepage   : 'guide.hmd',
-			//loadSidebar: 'sidebar.md',
-			auto2top   : true,
-			maxLevel   : 4, 
-			subMaxLevel: 4,
-
-			// 5. docsify-themeable
-			themeable : { 
-				// readyTransition : false, 
-				// responsiveTables: false 
-			},
-			plantuml: {
-				skin: 'default',
-			},
-			markdown: {
-			    renderer: {
-			      code: function(code, lang) {
-				if (lang === "mermaid") {
-				  return (
-				    '<div class="mermaid" style="background-color: white; height: 50em; padding-bottom: 1em;">' + mermaid.render('mermaid-svg-' + num++, code) + "</div>"
-				  );
-				}
-				return this.origin.code.apply(this, arguments);
-			      }
-			    }
-			  }
-	};
-	</script>
-
-	<script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
-  	<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
-	<script src="https://unpkg.com/docsify-copy-code@2"></script>
-        <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-bash.min.js"></script>
-        <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-docker.min.js"></script>
-        <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-markdown.min.js"></script>
-        <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-python.min.js"></script>
-        <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-json.min.js"></script>
-        <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-javascript.min.js"></script>
-        <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js" type="text/javascript"></script>
-        <script src="//unpkg.com/docsify-plantuml/dist/docsify-plantuml.min.js"></script>
-
-	<!-- <script src="https://unpkg.com/docsify-copy-code"></script> -->
-	<!-- <script src="https://unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script> -->
-	<!-- <script src="https://unpkg.com/docsify/lib/plugins/zoom-image.min.js"></script> -->
-</body>
-
-</html>
+      }
+    </script>
+    <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify@4/lib/plugins/search.min.js"></script>
+    <script src="https://unpkg.com/docsify-copy-code@2"></script>
+    <script src="//unpkg.com/mermaid/dist/mermaid.js"></script>
+    <script src="//unpkg.com/docsify-mermaid@latest/dist/docsify-mermaid.js">
+    <script>mermaid.initialize({ startOnLoad: true  });</script>
+  </body>
+  </html>
