PE-520: adding public key

--- a/guide/v0/index.html
+++ b/guide/v0/index.html
@@ -22,7 +22,8 @@
         name: 'PTI Documentation',
         repo: 'https://github.com/provenancetech/pti-docs',
         homepage: 'home.md',
-        loadSidebar: true,
+        relativePath: true,
+        loadSidebar: 'sidebar.md',
         maxLevel: 4,
         subMaxLevel: 2,
 
