docsify config adjustments

--- a/guide/v0/index.html
+++ b/guide/v0/index.html
@@ -26,6 +26,7 @@
         loadSidebar: 'sidebar.md',
         maxLevel: 4,
         subMaxLevel: 2,
+        auto2top: true,
 
       }
     </script>
