Manage domain change

--- a/examples/ReactJsSdkApp/public/index.html
+++ b/examples/ReactJsSdkApp/public/index.html
@@ -19,7 +19,7 @@
       ptiConfig = {
         clientId: "%REACT_APP_CLIENT_ID%", //Use the clientId provided by the PTI team
         generateTokenPath: "/generateToken", //Path to the endpoint on your backend to generate token
-        ptiFormsUrl: "%REACT_APP_FORMS_URL%" //URL to the forms endpoint, typically https://forms2.apidev.pticlient.com
+        ptiFormsUrl: "%REACT_APP_FORMS_URL%" //URL to the forms endpoint, typically https://forms.dev.fiant.io
       };
       window.ptiAsyncInit = function() {
         PTI.init(ptiConfig);
