PS-2090 - Deploy API Reference for Dev Environment

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <a href="api/v1/index.html">API reference</a>
 </p>
 <p>
+    <a href="api-dev/v1/index.html">DEV API reference</a>
+</p>
+<p>
     <a href="guide/v1/index.html">Developer's guide</a>
 </p>
 
