Adjust the code to avoid issues when ran locally:   - Double loading of iframes   - ResizeObserver loop errors when closing the dialogue)

--- a/examples/ReactJsSdkApp/public/index.html
+++ b/examples/ReactJsSdkApp/public/index.html
@@ -24,6 +24,12 @@
       window.ptiAsyncInit = function() {
         PTI.init(ptiConfig);
       }
+
+      window.addEventListener('error', (event) => {
+        if (event.message.includes('ResizeObserver loop')) {
+          event.stopImmediatePropagation();
+        }
+      });
     </script>
   </body>
 </html>
